--- a/Django-main/sgb_livros/templates/livros.html
+++ b/Django-main/sgb_livros/templates/livros.html
@@ -15,6 +15,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-danger-subtle">
         <div class="container-fluid justify-content-center">
           <span class="navbar-brand mb-0 h1 mx-3 text-gray"> SGBooks - Sistemas de Gerenciamento de Livros </span>
+          <a href="{% url 'logout' %}" class="link-light">Sair</a>
         </div>
       </nav>
     </header>
